statum-macros/tests/ui/invalid_validators_wrong_receiver.stderr
error: Error: is_draft must take `&self`. Statum injects machine fields into validator methods by name automatically.
  --> tests/ui/invalid_validators_wrong_receiver.rs:22:1
   |
22 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)
